--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfOOadARyD1ZoRDI-XRjmZMMuGQ2vqsSFWH5UpBvdLNHq-vbQ/viewform?embedded=true" width="640" height="1138" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfOOadARyD1ZoRDI-XRjmZMMuGQ2vqsSFWH5UpBvdLNHq-vbQ/viewform?embedded=true" width="640" height="1138" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </meta>
   </body>
 </html>
